<resources>
    <string name="app_name">Retail</string>


    <!-- Strings for profile activity-->
    <string name="shop_name">Shop name</string>
    <string name="proprietor">Proprietor</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address_line">Address line</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="sublocality_area">SubLocality Area</string>
    <string name="locality">Locality</string>
    <string name="change_location">Change Location</string>
    <string name="shop_details">Shop Location</string>
    <string name="save_profile">Save Profile</string>
    <string name="tap_to_mylocation">Tap to my location button to set shop location</string>
    <!-- END-->

</resources>
