<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fillViewport="true"
    tools:context="com.example.retail.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true">




            <android.support.design.widget.TextInputLayout
                android:id="@+id/profile_activity_shop_name_layout_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/profile_activity_shop_name_edittext_id"
                    style="@style/ProfileEdittextStyle"

                    android:drawablePadding="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/shop_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/profile_activity_proprietor_layout_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/profile_activity_shop_name_layout_id">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/profile_activity_proprietor_edittext_id"
                    style="@style/ProfileEdittextStyle"
                    android:drawablePadding="15dp"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/proprietor" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/profile_activity_mobile_no_layout_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/profile_activity_proprietor_layout_id">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/profile_activity_mobile_no_edittext_id"
                    style="@style/ProfileEdittextStyle"
                    android:drawablePadding="10dp"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/shop_locaton_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shop_details"
                android:layout_marginStart="57dp"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/profile_activity_mobile_no_layout_id"

                />

            <FrameLayout
                app:layout_constraintTop_toBottomOf="@+id/shop_locaton_heading"
                android:id="@+id/maps_frame_layout"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_height="wrap_content">


            </FrameLayout>

            <RelativeLayout
                android:id="@+id/maps_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"

                android:layout_marginBottom="15dp"
                app:layout_constraintTop_toBottomOf="@+id/shop_locaton_heading">



                <fragment

                    android:id="@+id/map"
                    android:layout_margin="5dp"

                    android:layout_width="match_parent"
                    android:layout_height="245dp"
                    android:layout_marginBottom="5dp"
                    />
                <ImageView
                    android:id="@+id/set_location_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
               />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/profile_activity_location_btn_id"

                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignBottom="@+id/map"
                    android:layout_alignEnd="@+id/map"
                    android:layout_marginBottom="11dp"
                    android:layout_marginEnd="14dp"
                    android:scaleType="center"
                    android:backgroundTint="@color/colorWhite"
                    />

            </RelativeLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/profile_activity_addline_1_layout_id"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/maps_layout">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/profile_activity_addline_1_edittext_id"
                    style="@style/ProfileEdittextStyle"
                    android:drawablePadding="10dp"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_line" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/profile_activity_sublocality_txtview_id"
                style="@style/ProfileEdittextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/city"
                android:textSize="20sp"
                android:drawablePadding="10dp"

                app:layout_constraintTop_toBottomOf="@+id/profile_activity_addline_1_layout_id" />

            <TextView
                android:id="@+id/profile_activity_locality_textview_id"
                style="@style/ProfileEdittextStyle"
                android:layout_width="match_parent"

                android:drawablePadding="10dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:text="@string/state"
                app:layout_constraintTop_toBottomOf="@id/profile_activity_sublocality_txtview_id" />



            <ImageView
                android:id="@+id/profile_activity_license_photo_imageview_id"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="16dp"


                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/profile_activity_sublocality_txtview_id" />

            <Button
                android:id="@+id/profile_activity_save_profile_btn_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"

                android:text="@string/save_profile"
                app:layout_constraintTop_toBottomOf="@+id/profile_activity_license_photo_imageview_id" />


        </android.support.constraint.ConstraintLayout>


    </RelativeLayout>

</ScrollView>
